gcc/testsuite/gdc.test/fail_compilation/imports/test21164b.d
import imports.test21164c;
enum N = O();
alias Q = R!(N, S);

